[tool.poetry]
name = "card_katas"
version = "0.1.0"
description = "Classic card games, used as a pretext for self-appointed code katas"
authors = ["Michał Woźniczak <michal.wozniczak@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
